# WaveRegistry

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  WAVE_PROGRAM_PLAN.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: errors.rs  events.rs  lib.rs  registry.rs  state.rs  validation.rs
program/: Cargo.toml
program/src/: lib.rs
sdk/: package.json
sdk/src/: index.ts
tests/: integration.rs
