[workspace]
resolver = "2"
members = [
    "core",
    "program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/drips-network/wave-registry"

[workspace.dependencies]
solana-program = "2.2"
borsh = { version = "1.5", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
