[package]
name = "wave-registry-program"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }
wave-registry-core = { path = "../core" }
solana-program.workspace = true
borsh.workspace = true
thiserror.workspace = true

[dev-dependencies]
solana-program-test = "2.2"
solana-sdk = "2.2"
